add firefox wbdriver e imovel selenium test

--- a/imobiliaria.html
+++ b/imobiliaria.html
@@ -24,12 +24,30 @@ Salário:
     <option id="entre2e3">Entre R$2.000,00 e R$3.000,00</option>
     <option id="entre3e4">Entre R$3.000,00 e R$4.000,00</option>
     <option id="entre4e5">Entre R$4.000,00 e R$5.000,00</option>
-    <option id="entre4e5">Entre R$5.000,00 e R$10.000,00</option>
+    <option id="entre5e10">Entre R$5.000,00 e R$10.000,00</option>
     <option id="maisDe10">Mais de R$10.000,00</option>
 </select>
 <br>
 Emails: <input id="emails" type="text">
 <br>
 Telefones: <input id="telefones" type="text">
+
+<h2>Imóvel</h2>
+Rua: <input id="ruaEndereco" type="text">
+Número: <input id="numeroEndereco" type="number"><br><br>
+Bairro: <input id="bairroEndereco" type="text">
+CEP: <input id="CEPEndereco" type="text"><br><br>
+Cidade: <input id="cidadeEndereco" type="text">
+Estado: <input id="estadoEndereco" type="text"><br><br>
+País: <input id="paisEndereco" type="text">
+Tipo:
+<select id="tipoImovel">
+    <option id="apartamento">Apartamento</option>
+    <option id="casa">Casa</option>
+</select><br><br>
+Descrição:
+<textarea id="descricaoImovel"></textarea>
+Valor alguel: <input id="aluguelEndereco" type="text">
+
 </body>
 </html>
