Configuração do framework css Bulma e criação das 4 páginas para navegar pelos links

--- a/saiu.html
+++ b/saiu.html
@@ -11,12 +11,8 @@
     <div class="hero-body">
         <div class="container">
             <h1 class="title">IMOBILIÁRIA</h1>
-            <a href="cliente.html">1. Página de clientes</a>
             <br>
-            <a href="imovel.html">2. Página de imóveis</a>
-            <br>
-            <br>
-            <a class="button is-link" href="saiu.html" >Sair</a>
+            <h2 class="subtitle" style="color:red">VOCÊ SAIU</h2>
         </div>
     </div>
 </section>
