adicionando bulma pag. imovel

--- a/imovel.html
+++ b/imovel.html
@@ -9,24 +9,24 @@
 <section class="hero">
     <div class="hero-body">
         <div class="container">
-            <h1>IMOBILIÁRIA</h1>
+            <h1 class="title">IMOBILIÁRIA</h1>
 
-            <h2>Imóvel</h2>
-            Rua: <input id="ruaEndereco" type="text">
-            Número: <input id="numeroEndereco" type="number"><br><br>
-            Bairro: <input id="bairroEndereco" type="text">
-            CEP: <input id="CEPEndereco" type="text"><br><br>
-            Cidade: <input id="cidadeEndereco" type="text">
-            Estado: <input id="estadoEndereco" type="text"><br><br>
-            País: <input id="paisEndereco" type="text">
+            <h2 class="subtitle">Imóvel</h2>
+            Rua: <input id="ruaEndereco" class="input is-primary is-rounded column is-one-third is-small" type="text">
+            Número: <input id="numeroEndereco" class="input is-primary is-rounded column is-one-third is-small" type="number"><br><br>
+            Bairro: <input id="bairroEndereco" class="input is-primary is-rounded column is-one-third is-small" type="text">
+            CEP: <input id="CEPEndereco" class="input is-primary is-rounded column is-one-third is-small" type="text"><br><br>
+            Cidade: <input id="cidadeEndereco" class="input is-primary is-rounded column is-one-third is-small" type="text">
+            Estado: <input id="estadoEndereco" class="input is-primary is-rounded column is-one-third is-small" type="text"><br><br>
+            País: <input id="paisEndereco" class="input is-primary is-rounded column is-one-third is-small" type="text"><br>
             Tipo:
-            <select id="tipoImovel">
+            <select class="select is-small" id="tipoImovel">
                 <option id="apartamento">Apartamento</option>
                 <option id="casa">Casa</option>
             </select><br><br>
             Descrição:
-            <textarea id="descricaoImovel"></textarea>
-            Valor alguel: <input id="aluguelEndereco" type="text">
+            <textarea class="textarea is-primary is-size-5" id="descricaoImovel"></textarea><br>
+            Valor alguel: <input class="input is-primary is-rounded column is-one-third is-small" id="aluguelEndereco" type="text">
         </div>
     </div>
 </section>
